# test-casing

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/: dependabot.yml
.github/workflows/: ci.yml
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js
implementors/core/iter/traits/collect/: trait.IntoIterator.js
implementors/core/iter/traits/iterator/: trait.Iterator.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
lib/: Cargo.toml  README.md
lib/src/: arg_names.rs  decorators.rs  lib.rs  nightly.rs  no_traces.rs  test_casing.rs
lib/src/decorators/: mod.rs  traces.rs
lib/tests/: traces.rs  version_match.rs
lib/tests/integration/: decorate.rs  main.rs  test_casing.rs
lib/tests/ui/: bug_in_iter_expr.stderr  fn_with_too_many_args.rs  fn_with_too_many_args.stderr  fn_without_args.stderr  invalid_case_count.rs  invalid_iter_expr.rs  invalid_iter_expr.stderr  invalid_mapping.stderr  unsupported_item.stderr
lib/tests/ui-nightly/: invalid_ignore_attr.rs  invalid_ignore_attr.stderr  invalid_should_panic_attr.rs
macro/: Cargo.toml  README.md
macro/src/: decorate.rs  lib.rs  nightly.rs  tests.rs
macro/src/test_casing/: mod.rs  nightly.rs  tests.rs
search.desc/test_casing/: test_casing-desc-0-.js
search.desc/test_casing_macro/: test_casing_macro-desc-0-.js
search.index/: 0283880357d3.js  028805d11b2c.js  168c9d0810db.js  1d9fb7d9194b.js  2177d30bc553.js  2770ff6686de.js  278df4671160.js  31d102dd8ef6.js  3449bb59d9a1.js  3ee9435bd105.js  3f1139658615.js  4223dee02653.js  45004a5727cc.js  4bf4f87f7b88.js  54035e512c89.js  601a650cd4fd.js  75110b18ee99.js  759e407e97a8.js  7efd344e1e6b.js  root.js
search.index/crateNames/: 774f5badec9a.js
search.index/desc/: 6e839bdffe69.js  97048aca9470.js
search.index/entry/: 1da4764fba13.js  76226d5a94b0.js  d6b56736b7df.js
search.index/function/: 37aa574a0631.js  44d9577395ed.js  7efc2ba6f862.js
search.index/generic_inverted_index/: 626dec2022c7.js  acef4aa4b472.js  f505293b990b.js
search.index/name/: 876a9dadca0a.js  9aeb96916ce9.js  e082ed311b93.js
search.index/normalizedName/: 7cbe67a731b8.js  8eb28781e38c.js  cf2b776b7392.js
search.index/path/: 05a5dac6c241.js  7c7609d2605c.js  88cac7dfa57e.js
search.index/type/: 1a4074a7745e.js  3fb83761e439.js  401f173eb29a.js
src/: decorators.rs  lib.rs  nightly.rs  test_casing.rs
src/test_casing/: decorators.rs.html  lib.rs.html  test_casing.rs.html
src/test_casing/decorators/: mod.rs.html  traces.rs.html
src/test_casing_macro/: decorate.rs.html  lib.rs.html
src/test_casing_macro/test_casing/: mod.rs.html
test_casing/: all.html  attr.decorate.html  attr.test_casing.html  index.html  macro.cases!.html  macro.cases.html  sidebar-items.js  struct.Product.html  struct.ProductIter.html  struct.TestCases.html
test_casing/decorators/: index.html  sidebar-items.js  struct.Retry.html  struct.RetryErrors.html  struct.Sequence.html  struct.Timeout.html  struct.Trace.html  trait.DecorateTest.html  trait.TestFn.html
test_casing/decorators/traces/: struct.Trace.html
test_casing/test_casing/: struct.Product.html  struct.ProductIter.html  struct.TestCases.html
test_casing_macro/: all.html  attr.decorate.html  attr.test_casing.html  index.html  sidebar-items.js
tests/: integration.rs  ui.rs
tests/integration/: decorate.rs  main.rs  test_casing.rs
tests/ui/: bug_in_iter_expr.rs  case_type_mismatch.rs  case_type_mismatch.stderr  fn_with_too_many_args.stderr  fn_without_args.rs  invalid_case_count.stderr  invalid_mapping.rs  invalid_mapping.stderr  unsupported_item.rs
tests/ui-nightly/: generic_fn.rs  generic_fn.stderr  invalid_ignore_attr.stderr  invalid_should_panic_attr.stderr
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/iter/traits/collect/: trait.IntoIterator.js
trait.impl/core/iter/traits/exact_size/: trait.ExactSizeIterator.js
trait.impl/core/iter/traits/iterator/: trait.Iterator.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/test_casing/decorators/: trait.DecorateTest.js
