[workspace]
members = ["lib", "macro"]
resolver = "2"

[workspace.package]
# **NB.** `test-casing-macro` dependency version must be bumped in the `test-casing` manifest
version = "0.1.3"
edition = "2021"
rust-version = "1.72"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/slowli/test-casing"

[workspace.dependencies]
assert_matches = "1.5.0"
doc-comment = "0.3.4"
once_cell = "1.21.3"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.9.2"
syn = "2.0"
tokio = "1.48.0"
trybuild = "1.0.113"
version-sync = "0.9.4"
