[workspace]
members = ["lib", "macro"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
rust-version = "1.82"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/slowli/test-casing"

[workspace.dependencies]
# External dependencies
assert_matches = "1.5.0"
doc-comment = "0.3.4"
once_cell = "1.21.3"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.9.2"
syn = "2.0"
tokio = "1.49.0"
tracing = "0.1.41"
tracing-capture = "=0.2.0-beta.1"
tracing-subscriber = "0.3.20"
trybuild = "1.0.115"
version-sync = "0.9.4"

# Workspace dependencies
# We use the exact version to not bother with compatibility of internal items used by proc macros.
test-casing-macro = { version = "=0.1.3", path = "macro" }

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
