[package]
name = "test-casing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["testing", "parameterized", "case", "decorator"]
categories = ["development-tools::testing"]
description = "Parameterized test cases and test decorators"

[dependencies]
once_cell = { workspace = true, optional = true }
test-casing-macro.workspace = true

[dev-dependencies]
doc-comment.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }
trybuild.workspace = true
version-sync.workspace = true

[features]
default = []
# Uses custom test frameworks APIs together with a generous spicing of hacks
# to include arguments in the names of the generated tests.
nightly = ["test-casing-macro/nightly", "once_cell"]
