[package]
name = "test-casing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["testing", "parameterized", "case", "decorator"]
categories = ["development-tools::testing"]
description = "Parameterized test cases and test decorators"

[package.metadata.docs.rs]
features = ["tracing"]
# Set `docsrs` to enable unstable `doc(cfg(...))` attributes.
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
once_cell = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["env-filter"] }

test-casing-macro.workspace = true

[dev-dependencies]
doc-comment.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }
tracing-capture.workspace = true
trybuild.workspace = true
version-sync.workspace = true

[features]
default = []
# Enables tracing decorators and tracing in tests.
tracing = ["dep:tracing", "dep:tracing-subscriber"]
# Uses custom test frameworks APIs together with a generous spicing of hacks
# to include arguments in the names of the generated tests.
nightly = ["test-casing-macro/nightly", "dep:once_cell"]

[lints]
workspace = true

[[test]]
name = "traces"
required-features = ["tracing"]
