[package]
name = "test-casing-macro"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[features]
default = []
# Uses custom test frameworks APIs together with a generous spicing of hacks
# to include arguments in the names of the generated tests.
nightly = []
