[package]
name = "test-casing-macro"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["testing", "parameterized", "case"]
categories = ["development-tools::testing"]
description = "Procedural macro for `test-casing`"
repository = "https://github.com/slowli/test-casing"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
assert_matches = "1.5.0"
syn = { version = "1.0", features = ["extra-traits"] }
version-sync = "0.9.4"

[features]
default = []
# Uses custom test frameworks APIs together with a generous spicing of hacks
# to include arguments in the names of the generated tests.
nightly = []
