[package]
name = "test-casing-macro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["testing", "parameterized", "case", "decorator"]
categories = ["development-tools::testing"]
description = "Procedural macro for `test-casing`"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }

[dev-dependencies]
assert_matches.workspace = true
syn = { workspace = true, features = ["extra-traits"] }
version-sync.workspace = true

[features]
default = []
# Uses custom test frameworks APIs together with a generous spicing of hacks
# to include arguments in the names of the generated tests.
nightly = ["proc-macro2/span-locations"]
